@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/usr/bin/env bash
 #
 # Use this script to run your program LOCALLY.
 #
@@ -15,11 +15,17 @@ set -e # Exit early if any commands fail
 (
   cd "$(dirname "$0")" # Ensure compile steps are run within the repository directory
   mvn clean
-  mvn -q -B package -Ddir=/tmp/codecrafters-build-shell-java
+  mvn -q -B package -DargLine="-XX:+EnableDynamicAgentLoading" -DargLine="-Xlog:disable" -Ddir=/tmp/codecrafters-build-shell-java
 )
 
 # Copied from .codecrafters/run.sh
 #
 # - Edit this to change how your program runs locally
 # - Edit .codecrafters/run.sh to change how your program runs remotely
-exec java -jar /tmp/codecrafters-build-shell-java/codecrafters-shell.jar "$@"
+
+
+exec java \
+  -jar /tmp/codecrafters-build-shell-java/codecrafters-shell.jar \
+  -Dexec.mainClass="NewMain" \
+  "$@" \
+    2> >(grep -v '^WARNING:')
